--- a/src/styles.css
+++ b/src/styles.css
@@ -110,7 +110,6 @@ section{
     grid-column: 1 / 3;
     margin-bottom: 5px;
 }
-/* .serv-list-container{grid-column: 1 / 2;} */
 
 .serv-list-img{
     margin-top: 10px;
@@ -132,6 +131,14 @@ section{
 .container-img img{
     height: 100%;
     object-fit: cover;
+}
+
+.btn-light{
+    background-color: var(--main-color-text) !important;
+    color: var(--light-degraded) !important;
+    font-family: "Courgette-regular";
+    font-size: 17px;
+    cursor: pointer;
 }
 
 
