(UPDATE) Galeria Parque funcional y responsive

--- a/src/app/components/slider-home/slider-home.component.css
+++ b/src/app/components/slider-home/slider-home.component.css
@@ -1,54 +1,6 @@
-/*Slider - Home CSS*/
-
-/* #slider-home{
-    margin-top: var(--margin-top-components);
-}
-
-.slider-main-img{
-    height: 320px;
-}
-
-.slider-thumb{
-    height:100px;
-    cursor:pointer;
-}
-
-.thumbs{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    margin-top: 15px;
-}
-
-@media(max-width: 900px){
-    .slider-thumb{
-        height: 90px;
-    }
-}
-
-@media(max-width: 700px){
-    .slider-thumb{
-        height: 80px;
-    }
-}
-
-@media(max-width: 600px){
-    .slider-main-img{
-        height: 200px;
-    }
-
-    .slider-thumb{
-        height: 70px;
-    }
-}
-
-@media(max-width: 450px){
-    
-} */
 
 .slider-home{
   display: block;
-  /* height: 320px; */
   width: 100%;
 }
 
@@ -111,14 +63,16 @@
 
 .slider-thumb{
   height:100px;
+  width: 100%;
   cursor:pointer;
 }
 
-.thumbs{
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
-  margin-top: 15px;
+.thumbs {
+	margin-top: 15px;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: nowrap;
+  column-gap: 10px;
 }
 
 /* nav-mobile */
