--- a/src/app/components/galeria-parque/galeria-parque.component.css
+++ b/src/app/components/galeria-parque/galeria-parque.component.css
@@ -9,11 +9,42 @@
 .slider-thumb{
     margin-top: 5px;
     height:100px;
+    cursor: pointer;
+}
+
+.background-blur {
+	background-color: rgba(0, 0, 0, .9);
+	position: fixed;
+	height: 100vh;
+	width: 100vw;
+	top: 0;
+	left: 0;
+	z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.control.exit{
+    outline: 0;
+    cursor: pointer;
+    color: var(--main-color-text);
+    font-size: 2em;
+    transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+    position: absolute;
+    top: 30px;
+    right: 60px;
 }
 
 @media(max-width: 700px){
     .slider-thumb{
         height: 80px;
+    }
+}
+
+@media(max-width: 600px){
+    .app-slider-home{
+        width: 60%;
     }
 }
 
