--- a/src/app/components/galeria-parque/galeria-parque.component.html
+++ b/src/app/components/galeria-parque/galeria-parque.component.html
@@ -8,33 +8,25 @@
     </div>
 
     <div class="galeria-parque">
-        <div class="slider-thumb thumb-a">
-            <div class="border">
+        <div class="slider-thumb" *ngFor="let image of images; let i = index;">
+            <div class="border" (click)="showSliderModal(image, i)">
                 <div class="container-img">
-                    <img src="../../../assets/images/slider-home/img2.jpg" alt="habitacion">
-                </div>
-            </div>
-        </div>
-        <div class="slider-thumb thumb-b">
-            <div class="border">
-                <div class="container-img">
-                    <img src="../../../assets/images/slider-home/img3.jpg" alt="habitacion">
-                </div>
-            </div>
-        </div>
-        <div class="slider-thumb thumb-c">
-            <div class="border">
-                <div class="container-img">
-                    <img src="../../../assets/images/slider-home/img4.jpg" alt="habitacion">
-                </div>
-            </div>
-        </div>
-        <div class="slider-thumb thumb-d">
-            <div class="border">
-                <div class="container-img">
-                    <img src="../../../assets/images/slider-home/img5.jpg" alt="habitacion">
+                    <img src="{{image.src}}" alt="{{image.alt}}">
                 </div>
             </div>
         </div>
     </div>
+
+    <ng-container *ngIf="viewSliderModal">
+        <div class="background-blur">
+            <fa-icon [icon]="faTimes" class="control exit" (click)="closeSliderModal()"></fa-icon>
+            <app-slider-home
+                class="app-slider-home"
+                [isModal]="true"
+                [selectedImgModal]="img"
+                [indexModal]="index"
+            ></app-slider-home>
+        </div>
+    </ng-container>
+
 </section>
