Solucion al problema de las rutas de imagenes en produccion

--- a/src/app/components/ademas/ademas.component.html
+++ b/src/app/components/ademas/ademas.component.html
@@ -1,11 +1,12 @@
 <section class="ademas-home">
     <div class="separador">
-        <img src="../../../assets/images/separador.png" class="separador-izq" alt="adorno de separacion"
-            srcset="../../../assets/images/separador.svg"/>
+        <img src="assets\images\separador.png" class="separador-izq" alt="adorno de separacion"
+            srcset="assets\images\separador.svg"/>
         <h3 class="subheader">ademas</h3>
-        <img src="../../../assets/images/separador.png" class="separador-der" alt="adorno de separacion"
-            srcset="../../../assets/images/separador.svg"/>
+        <img src="assets\images\separador.png" class="separador-der" alt="adorno de separacion"
+            srcset="assets\images\separador.svg"/>
     </div>
+    
 
     <div class="ico-group normalize-text">
         <div class="ico-item">
