--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -14,7 +14,7 @@
                     </a>
                 </div>
                 <div class="footer-logo">
-                    <img src="../../../assets/images/logo.png" alt="logotipo" />
+                    <img src="assets\images\logo.png" alt="logotipo" />
                 </div>
             </div>
 
