--- a/src/app/components/galeria-parque/galeria-parque.component.html
+++ b/src/app/components/galeria-parque/galeria-parque.component.html
@@ -1,10 +1,10 @@
 <section class="parque">
     <div class="separador">
-        <img src="../../../assets/images/separador.png" class="separador-izq" alt="adorno de separacion"
-            srcset="../../../assets/images/separador.svg">
+        <img src="assets\images\separador.png" class="separador-izq" alt="adorno de separacion"
+            srcset="assets\images\separador.svg">
         <h3 class="subheader">Parque</h3>
-        <img src="../../../assets/images/separador.png" class="separador-der" alt="adorno de separacion"
-            srcset="../../../assets/images/separador.svg">
+        <img src="assets\images\separador.png" class="separador-der" alt="adorno de separacion"
+            srcset="assets\images\separador.svg">
     </div>
 
     <div class="galeria-parque">
