--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="center">
         <div id="logo">
             <a [routerLinkActive]="['active']">
-                <img src="../../../assets/images/logo.png" alt="Aqui Me Quedo">
+                <img src="assets\images\logo.png" alt="Aqui Me Quedo">
             </a>
         </div>
         <nav id="menu" class="menu">
