--- a/src/app/components/ref-geo/ref-geo.component.html
+++ b/src/app/components/ref-geo/ref-geo.component.html
@@ -15,7 +15,7 @@
             </p>
             <div class="ref-img border">
                 <div class="container-img">
-                    <img src="../../../assets/images/las-rosas.jpg" alt="Villa de las Rosas">
+                    <img src="assets\images\las-rosas.jpg" alt="Villa de las Rosas">
                 </div>
             </div>
         </div>
@@ -35,7 +35,7 @@
             </p>
             <div class="ref-img border">
                 <div class="container-img">
-                    <img src="../../../assets/images/los elefantes.jpg" alt="Balneario Los Elefantes">
+                    <img src="assets\images\los elefantes.jpg" alt="Balneario Los Elefantes">
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
         <div class="ref-content grid">
             <div class="ref-img border">
                 <div class="container-img">
-                    <img src="../../../assets/images/feria.jpg" alt="Feria Mina Clavero">
+                    <img src="assets\images\feria.jpg" alt="Feria Mina Clavero">
                 </div>
             </div>
             <p>
