--- a/src/app/components/serv-home/serv-home.component.html
+++ b/src/app/components/serv-home/serv-home.component.html
@@ -18,7 +18,7 @@
     <div class="serv-list-img">
         <div class="border">
             <div class="container-img">
-                <img src="../../../assets/images/serv-home.jpg" alt="balcon">
+                <img src="assets\images\serv-home.jpg" alt="balcon">
             </div>
         </div>
     </div>
