--- a/src/app/components/sobre-nosotros/sobre-nosotros.component.html
+++ b/src/app/components/sobre-nosotros/sobre-nosotros.component.html
@@ -2,7 +2,7 @@
     <h3 class="subheader subrayed">Sobre nuestro complejo...</h3>
     <div class="s-nosotros-img border">
         <div class="container-img">
-            <img src="../../../assets/images/sobre-nosotros.jpg" alt="ventanal">
+            <img src="assets\images\sobre-nosotros.jpg" alt="ventanal">
         </div>
     </div>
     <p>
