--- a/src/app/components/tipologias/tipologias.component.html
+++ b/src/app/components/tipologias/tipologias.component.html
@@ -4,7 +4,7 @@
         <div class="serv-list-img">
             <div class="border">
                 <div class="container-img">
-                    <img src="../../../assets/images/tipologias/cabaña.jpg" alt="Planta baja de la cabaña">
+                    <img src="assets\images\tipologias\cabaña.jpg" alt="Planta baja de la cabaña">
                 </div>
             </div>
         </div>  
@@ -42,7 +42,7 @@
         <div class="serv-list-img">
             <div class="border">
                 <div class="container-img">
-                    <img src="../../../assets/images/tipologias/casa.jpg"
+                    <img src="assets\images\tipologias\casa.jpg"
                         alt="Fachada de la casa">
                 </div>
             </div>
