--- a/src/app/components/redes/redes.component.html
+++ b/src/app/components/redes/redes.component.html
@@ -3,14 +3,14 @@
     <h2 class="subheader">¡Pero como puede ser!</h2>
 
     <div class="separador">
-        <img src="../../../assets/images/separador.png" class="separador-izq" alt="adorno de separacion"
-            srcset="../../../assets/images/separador.svg">
+        <img src="assets\images\separador.png" class="separador-izq" alt="adorno de separacion"
+            srcset="assets\images\separador.svg">
 
         <a href="https://www.instagram.com/aquimequedominaclavero/" target="_blank"><fa-icon [icon]="faInstagram"></fa-icon></a>
         <a href="https://www.facebook.com/complejoaquimequedo/" target="_blank"><fa-icon [icon]="faFacebookSquare"></fa-icon></a>
         <a href="https://wa.me/5493544565770" target="_blank"><fa-icon [icon]="faWhatsapp"></fa-icon></a>
 
-        <img src="../../../assets/images/separador.png" class="separador-der" alt="adorno de separacion"
-            srcset="../../../assets/images/separador.svg">
+        <img src="assets\images\separador.png" class="separador-der" alt="adorno de separacion"
+            srcset="assets\images\separador.svg">
     </div>
 </section>
