--- a/src/app/components/consultar/consultar.component.css
+++ b/src/app/components/consultar/consultar.component.css
@@ -76,6 +76,15 @@
       border-bottom: 1px solid var(--main-color-text);
   }
 
+  .input-error{
+	color: var(--main-color-text);
+	font-family: "Leelawadee";
+	font-size: 1em;
+	position: relative;
+	top: 3px;
+    transition: all 300ms ease-in-out;
+}
+
 @media(max-width: 700px){
     .consultar form,
     .input-select select,
