'UPDATE' Integracion de animaciones

--- a/src/app/components/complejo/complejo.component.html
+++ b/src/app/components/complejo/complejo.component.html
@@ -1,4 +1,7 @@
-<app-sobre-nosotros></app-sobre-nosotros>
-<app-consultar></app-consultar>
-<app-tipologias></app-tipologias>
-<app-galeria-parque></app-galeria-parque>
+<div class="animated fadeIn">
+    <app-sobre-nosotros></app-sobre-nosotros>
+    <app-consultar></app-consultar>
+    <app-tipologias></app-tipologias>
+    <app-galeria-parque></app-galeria-parque>
+</div>
+
