--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
-<app-slider-home></app-slider-home>
-<app-consultar></app-consultar>
-<app-serv-home></app-serv-home>
-<app-ademas></app-ademas>
-<app-opiniones></app-opiniones>
-<app-redes></app-redes>
+<div class="animated fadeIn">
+    <app-slider-home></app-slider-home>
+    <app-consultar></app-consultar>
+    <app-serv-home></app-serv-home>
+    <app-ademas></app-ademas>
+    <app-opiniones></app-opiniones>
+    <app-redes></app-redes>
+</div>
