--- a/src/app/components/opiniones/opiniones.component.html
+++ b/src/app/components/opiniones/opiniones.component.html
@@ -58,6 +58,7 @@
 
             <ng-container *ngIf="viewFormModal">
                 <app-opiniones-form 
+                    @modalAnimation
                     [experiencia]="expValue"
                     (cerrarModal)="cerrarModal()"            
                 ></app-opiniones-form>
