--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,4 +1,4 @@
-<section class="contact-form">
+<section class="contact-form animated fadeIn">
     <h3 class="subheader subrayed">
         ¡Comunicate, reserva y conocenos!
     </h3>
