--- a/src/app/components/ubicacion/ubicacion.component.html
+++ b/src/app/components/ubicacion/ubicacion.component.html
@@ -1,3 +1,5 @@
-<app-maps></app-maps>
-<app-ref-geo></app-ref-geo>
-<app-consultar></app-consultar>
+<div class="animated fadeIn">
+    <app-maps></app-maps>
+    <app-ref-geo></app-ref-geo>
+    <app-consultar></app-consultar>
+</div>
