--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,27 @@
+/* Animaciones entre rutas */
+.animated {
+    animation-duration: .5s;
+    -o-animation-duration: .5s;
+    -moz-animation-duration: .5s;
+    -webkit-animation-duration: .5s;
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+        transform:translateY(30px)
+    }
+    to{
+        opacity: 1;
+        transform:translateY(0)
+    }
+}
+.fadeIn {
+    animation-name: fadeIn;
+}
+
 /* CSS Normalizado */
+
 :root{
     --main-color-text: #EAA149;
     --dark-degraded:#120201;
