--- a/src/app/components/maps/maps.component.html
+++ b/src/app/components/maps/maps.component.html
@@ -2,8 +2,8 @@
     <h3 class="subheader">Te esperamos aqui...</h3>
     <div class="border">
         <div class="container-img">
-            <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom"> 
-                <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+            <agm-map [latitude]="lat" [longitude]="lgn" [zoom]="zoom"> 
+                <agm-marker [latitude]="lat" [longitude]="lgn"></agm-marker>
               </agm-map>
         </div>
     </div>
