--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -7,12 +7,12 @@
         <div class="form-group group-name">
             <label for="nombre">Nombre y Apellido: *</label>
             <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" #nombre="ngModel" [(ngModel)]="contacto.nombre" minlength="4" maxlength="32" required pattern="([A-ZÁÉÍÓÚ]{1}[a-zñáéíóú]+[\s]*)+$"/>
-            <small class="input-error" *ngIf="!nombre.valid && nombre.touched && !nombre.focus">Su nombre debe empezar con mayusculas!</small>
+            <small class="input-error" *ngIf="!nombre.valid && nombre.touched && !nombre.focus">Su nombre debe empezar con mayusculas</small>
         </div>
         <div class="form-group group-tel">
             <label for="telefono">Telefono: *</label>
             <input type="tel" id="telefono" name="telefono" placeholder="Escribe tu telefono" #telefono="ngModel" [(ngModel)]="contacto.telefono" required pattern="(?:(?:00)?549?)?0?(?:11|[2368]\d)(?:(?=\d{0,2}15)\d{2})??\d{8}$"/>
-            <small class="input-error" *ngIf="!telefono.valid && telefono.touched && !telefono.focus">Ingrese un telefono valido!</small>
+            <small class="input-error" *ngIf="!telefono.valid && telefono.touched && !telefono.focus">Ingrese un telefono correcto</small>
         </div>
         <div class="form-group group-dsd">
             <label for="desde">Desde: *</label>
@@ -54,9 +54,10 @@
         <div class="form-group group-dtlls">
             <label for="detalles">Detalles: </label>
             <textarea name="detalles" id="detalles" placeholder="Escribe mas detalles." #detalles="ngModel" [(ngModel)]="contacto.detalles" minlength="4" maxlength="450" pattern="[a-zA-ZÀ-ÿ\u00f1\u00d10-9,\¿\?\¡\!\.\:\s]+$"></textarea>
-            <small class="input-error" *ngIf="!detalles.valid && detalles.touched && !detalles.focus">Ingrese una descripcion de su consulta</small>
+            <small class="input-error" *ngIf="!detalles.valid && detalles.touched && !detalles.focus">Algunos caracteres de su consulta no podemos procesarlos</small>
         </div>
 
-        <input type="submit" class="btn-light" [disabled]="contactoForm.invalid" value="Enviar">
+        <small class="input-error" *ngIf="errorInput">Complete todos los datos con (*)</small>
+        <input type="submit" class="btn-light" value="Enviar">
     </form>
 </section>
